<resources>
    <string name="app_name">RecapAppAll</string>

    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>

    <string name="btnSignUp">Sign Up</string>
    <string name="btnSignIn">Sign In</string>
    <string name="rememberMe">Remember Me</string>

    <string name="fragment_one">Fragment One</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="fragment_three">Fragment Three</string>

    <string name="update_profile">Update Profile</string>
    <string name="first_name_last_name">First Name + Last Name</string>

    <string name="open_camera">OPEN CAMERA</string>
    <string name="go_to_website">Call My Number</string>
    <string name="save">Save</string>
</resources>