<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UpdateProfileActivity">

    <LinearLayout
        android:id="@+id/lnr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:inputType="text"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="text"
            android:hint="@string/hint_last_name"/>

        <EditText
            android:id="@+id/ed_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/hint_first_name"/>

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"/>

        <EditText
            android:id="@+id/ed_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="phone"
            android:hint="@string/hint_phone_number"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnr1"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/colorWhite" />

</RelativeLayout>