<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <LinearLayout
        android:id="@+id/lnr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextWhite"
                android:src="@drawable/ic_edit_black_24dp"
                android:onClick="goToUpdateProfile"
                android:background="@color/colorWhite"/>

            <TextView
                android:id="@+id/txtMainFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/hint_first_name"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtMainLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/hint_last_name"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtMainEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/hint_email"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtMainPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/hint_phone_number"
            android:gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/lnr1"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lnr2"
        android:layout_below="@id/separator"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/bg_color" />

    <LinearLayout
        android:id="@+id/lnr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_fragmentOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="openFragOne"
            android:text="@string/fragment_one"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite" />

        <Button
            android:id="@+id/btn_fragmentTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="openFragTwo"
            android:text="@string/fragment_two"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite" />

        <Button
            android:id="@+id/btn_fragmentThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="openFragThree"
            android:text="@string/fragment_three"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>